--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
         <!--/////////// Featured Brands //////////-->
         <section class="shadow">
+        <div class="col-1">
           <figure>
             <img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
             <figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -86,11 +87,13 @@
           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </section>
         <!--/////////// Ends Featured Brands //////////-->
         
         <!--/////////// Archive List //////////-->
         <section class="shadow">
+          <div class="col-2">
           <h2>Shoe Archive</h2>
           <h3><a href="#">2014</a></h3>
           <ul>
@@ -131,10 +134,12 @@
             <li><a href="#">Jul</a></li>
             <li><a href="#">Jun</a></li>
           </ul>
+          </div>
         </section>
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
+        <div class="cols">
         <section class="shadow">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -164,6 +169,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </section>
+        </div>
         <!--/////////// Ends Deals //////////-->
 
       </div><!-- .wrapper -->
